added background image

--- a/hortulo/src/index.css
+++ b/hortulo/src/index.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url(./assets/background.png);
+    background-position: center;
+    background-size: cover;
+}
+
 .rotate {
     animation: rotation 5s infinite linear;
 }
