--- a/hortulo/src/index.css
+++ b/hortulo/src/index.css
@@ -1,3 +1,7 @@
+:root {
+    background-color: #00a12bff;
+}
+
 body {
     background-image: url(./assets/background.png);
     background-position: center;
